[project]
name = "mozhi_platform"
version = "0.1.0"
description = "墨枢投资系统"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "akshare>=1.18.55,<2.0.0",
    "requests>=2.28",
    "python-dateutil>=2.8",
    "pytest>=7.0",
    "tabulate>=0.9",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "backtest*",
    "backtest.methods*",
    "backtest.factors*",
    "backtest.engine*",
    "backtest.runners*",
    "backtest.portfolio*",
    "backtest.reports*",
    "backtest.events*",
    "backtest.adapters*",
    "utils*",
    "reporting*",
    "trading*",
    "scheduler*",
    "monitoring*",
    "signals*",
]

[tool.coverage.run]
source = ["src/backtest"]
omit = ["*/tests/*", "*/__pycache__/*", "*.pyc"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
sort = "Cover"
precision = 2

[tool.coverage.html]
directory = "coverage_html"
